# onepagespiderman

./: README.md  pyproject.toml
src/: items.py  middlewares.py  pipelines.py  settings.py
src/spiders/: Feedbooks.py
