[tool.poetry]
name = "onepagespiderman"
version = "0.1.0"
description = ""
authors = ["RedR1ghtHand <4aikaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.12.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
